<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_note_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_activity_note_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:saveEnabled="false"
            android:text="@string/tv_note_date_modified"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_activity_note_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:saveEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_activity_note_date">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autocomplete_activity_note_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:inputType="none"
                android:saveEnabled="false"
                android:textSize="@dimen/edit_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_activity_note_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/et_note_title_hint"
            android:saveEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_activity_note_category">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_activity_note_title"
                android:layout_width="match_parent"
                android:transitionName="@string/transition_name_note_title"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edit_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_activity_note_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_small"
            android:enabled="true"
            android:hint="@string/et_note_body_hint"
            android:saveEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_activity_note_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_activity_note_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transitionName="@string/transition_name_note_text"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textSize="@dimen/edit_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
