<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_note_list_item"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:strokeColor="@color/yellow_900"
        app:strokeWidth="@dimen/stroke_small"
        app:cardCornerRadius="@dimen/margin_small"
        app:cardElevation="@dimen/elevation_small"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/padding_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_note_list_item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="center"
                android:transitionName="@string/transition_name_note_title"
                tools:text="@string/tv_default_text"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_note_list_item_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ellipsize="end"
                android:maxLines="7"
                android:transitionName="@string/transition_name_note_text"
                android:layout_marginVertical="@dimen/margin_small"
                tools:text="@string/tv_default_text"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/text_view_note_list_item_category"
                app:layout_constraintTop_toBottomOf="@+id/text_view_note_list_item_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_note_list_item_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/margin_small"
                tools:text="@string/tv_default_text"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?attr/colorSecondaryVariant"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>